# acg_3d_studio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  build.bat  build_all.bash  build_all.bat  setup_env.bash  setup_env.bat  setup_vs.bat
CMakeModules/: FindAssimp.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake
applications/: CMakeLists.txt  Makefile
applications/lab1/: CMakeLists.txt  Makefile  lab1  main.cpp  viewer
applications/lab1/include/glad/: glad.h
applications/lab1/include/lab1/: State.h  UpdateCallback.h
applications/lab1/include/lab1/callbacks/: Callbacks.h  LightColorCallback.h  RotateCallback.h  TranslateCallback.h  UpdateCallback.h
applications/lab1/include/lab1/nodes/: Geometry.h  Group.h  LOD.h  M_Node.h  Node.h  Transform.h
applications/lab1/include/lab1/visitors/: NodeVisitor.h  RenderVisitor.h  UpdateVisitor.h
applications/lab1/include/vr/: Application.h  BoundingBox.h  Camera.h  FPSCounter.h  Geometry.h  Group.h  Light.h  Loader.h  Material.h  Node.h  NodeVisitor.h  RenderVisitor.h  Scene.h  Shader.h  State.h  Text.h  Timer.h  Transform.h  UpdateCallback.h  UpdateVisitor.h  Version.h  vrlib_version.h.in
applications/lab1/include/vr/nodes/: Geometry.h  Group.h  M_Node.h  Node.h  Transform.h
applications/lab1/include/vr/visitors/: NodeVisitor.h  RenderVisitor.h  UpdateVisitor.h
applications/lab1/src/: CMakeLists.txt
applications/lab1/src/lab1/: State.cpp
applications/lab1/src/lab1/nodes/: Geometry.cpp  Group.cpp  LOD.cpp  Transform.cpp
applications/lab1/src/lab1/visitors/: RenderVisitor.cpp  UpdateVisitor.cpp
applications/lab1/src/vr/: Application.cpp  Camera.cpp  FPSCounter.cpp  Light.cpp  Loader.cpp  Material.cpp  Mesh.cpp  Node.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Timer.cpp  glErrorUtil.cpp  version.cpp
applications/lab1/src/vr/nodes/: Geometry.cpp  Group.cpp  Transform.cpp
applications/lab1/src/vr/visitors/: RenderVisitor.cpp  UpdateVisitor.cpp
applications/lab2/: Makefile  lab1  lab2  main.cpp
applications/lab2/include/lab2/: RenderToTexture.h  State.h
applications/lab2/include/lab2/callbacks/: LightColorCallback.h  RotateCallback.h  TranslateCallback.h  UpdateCallback.h
applications/lab2/include/lab2/nodes/: Geometry.h  Group.h  Node.h
applications/lab2/include/lab2/visitors/: RenderVisitor.h
applications/lab2/include/vr/: Application.h  Camera.h  Light.h  Loader.h  Material.h  Scene.h  Version.h
applications/lab2/src/lab2/: RenderToTexture.cpp  State.cpp
applications/lab2/src/lab2/nodes/: Geometry.cpp  Group.cpp  LOD.cpp  Transform.cpp
applications/lab2/src/lab2/visitors/: RenderVisitor.cpp  UpdateVisitor.cpp
applications/lab2/src/vr/: Application.cpp  Camera.cpp  FPSCounter.cpp  FileSystem.cpp  Light.cpp  Loader.cpp  Material.cpp  Scene.cpp  Shader.cpp  Texture.cpp
applications/lab3/: CMakeLists.txt  Makefile  lab2  lab3  main.cpp
applications/lab3/include/lab3/: Quad.h  RenderToTexture.h  State.h
applications/lab3/include/lab3/callbacks/: LightColorCallback.h  RotateCallback.h  TranslateCallback.h
applications/lab3/include/lab3/nodes/: Group.h  Node.h
applications/lab3/include/lab3/visitors/: RenderVisitor.h
applications/lab3/include/vr/: Application.h  Camera.h  FileSystem.h  Light.h  Material.h  Scene.h  Texture.h  glErrorUtil.h  vrlib_version.h.in
applications/lab3/src/lab3/: Quad.cpp  RenderToTexture.cpp  State.cpp
applications/lab3/src/lab3/nodes/: Geometry.cpp  Group.cpp  LOD.cpp  Transform.cpp
applications/lab3/src/lab3/visitors/: RenderVisitor.cpp  UpdateVisitor.cpp
applications/lab3/src/vr/: Application.cpp  Camera.cpp  FPSCounter.cpp  Light.cpp  Loader.cpp  Material.cpp  Scene.cpp  Shader.cpp  Texture.cpp  version.cpp
applications/viewer/: CMakeLists.txt  Makefile  main.cpp  viewer
applications/viewer/include/glad/: glad.h
applications/viewer/include/vr/: BoundingBox.h  Camera.h  FPSCounter.h  FileSystem.h  Light.h  Loader.h  Material.h  Mesh.h  Scene.h  Shader.h  Text.h  Texture.h  Timer.h  glErrorUtil.h
applications/viewer/src/: CMakeLists.txt  glad.c
applications/viewer/src/vr/: Application.cpp  FileSystem.cpp  Light.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Text.cpp  glErrorUtil.cpp
applications/visitorTest/: Makefile  main.cpp  visitorTest
applications/visitorTest/include/: Geometry.h  Group.h  Node.h  RenderVisitor.h  Transform.h  Visitor.h  geometry.h  group.h  node.h  rendervisitor.h  transform.h
dependencies/freetype-2.3.11/: CMakeLists.txt  ChangeLog
dependencies/freetype-2.3.11/builds/unix/: configure.ac  configure.raw
dependencies/freetype-2.3.11/builds/win32/vc2005/: index.html
dependencies/freetype-2.3.11/builds/win32/vc2008/: index.html
dependencies/freetype-2.3.11/builds/win32/visualc/: index.html
dependencies/freetype-2.3.11/builds/win32/visualce/: index.html
dependencies/freetype-2.3.11/builds/wince/vc2005-ce/: index.html
dependencies/freetype-2.3.11/builds/wince/vc2008-ce/: index.html
dependencies/freetype-2.3.11/docs/: release
dependencies/freetype-2.3.11/docs/reference/: ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-cache_subsystem.html  ft2-cid_fonts.html  ft2-computations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-incremental.html  ft2-index.html  ft2-lcd_filtering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-pfr_fonts.html  ft2-quick_advance.html  ft2-raster.html  ft2-sfnt_names.html  ft2-sizes_management.html  ft2-system_interface.html  ft2-toc.html  ft2-truetype_engine.html  ft2-truetype_tables.html  ft2-type1_tables.html  ft2-user_allocation.html  ft2-version.html  ft2-winfnt_fonts.html
dependencies/freetype-2.3.11/src/gzip/: adler32.c  zconf.h  zutil.c  zutil.h
docs/: Assignment1_Shader_Based_SceneGraph.md  Install_Instructions.md  README
(+948 files in other folders)
