SET(TARGET_NAME vrlib)  

FILE(GLOB_RECURSE SOURCE ${vrlib_SOURCE_DIR}/src/*.cpp ${vrlib_SOURCE_DIR}/src/*.c ${vrlib_SOURCE_DIR}/include/*.h)
ADD_LIBRARY(${TARGET_NAME} ${SOURCE})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${ASSIMP_LIBRARIES})

INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION bin )